--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,5 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_COMBOS_MAX_COMBOS_PER_KEY=15
